Incorporate foundation for multiplayer

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -1,5 +1,5 @@
 
-<template name="board">
+<template name="game">
   <h1>Game Board</h1>
   <div class="score">Score: {{score}}</div>
   <canvas width="450" height="450"></canvas>
