Use leaders instead of full players cursor

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -32,7 +32,7 @@
               </tr>
             </thead>
             <tbody>
-              {{#each players}}
+              {{#each leaders}}
                 <tr>
                   <td>{{score}}</td>
                   <td>{{playerName}}</td>
