--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 
 <head>
   <title>WAPRO | Meteor JS</title>
-  <meta name="viewport" content="width=500, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=510, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
