--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,36 @@
 </body>
 
 <template name="splash">
-  <a href={{pathFor 'menu'}}>Play Snake Pit</a>
+    <!-- navbar -->
+    <nav class="navbar navbar-default" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Snake Pit</a>
+        </div>
+    
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav">
+                <li class=""><a href="/">Home</a></li>
+            </ul>
+            <!-- <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Link</a></li>
+            </ul> -->
+        </div><!-- /.navbar-collapse -->
+    </nav>
+    <!-- end navbar -->
+
+    <div  id="limit-container" class="container">
+        <div id="home-page" class="">
+            <a href={{pathFor 'menu'}}>Play Snake Pit</a>
+        </div>
+    </div>
 </template>
 
 <template name="loading">
