upper landing page looks alright

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
         <div class="cta-container">
             <div id="cta-play" class="text-center">
                 <div class="">
-                    <h2 class="text-center">Snake Pit</h2>
+                    <img id="np-logo" src="/Snake_Pit_Logo.png">
                 </div>
             </div>
             <div id="cta-container" class="text-center">
