added more styling, about to distribute templates

--- a/client/index.html
+++ b/client/index.html
@@ -33,16 +33,12 @@
         </div><!-- /.navbar-collapse -->
   </nav>    <!-- end navbar -->
 
-    <div  id="limit-container" class="">
-        <div class="cta-container">
-            <div id="cta-play" class="text-center">
-                <div class="">
-                    <img id="np-logo" src="/Snake_Pit_Logo.png">
-                </div>
-            </div>
+    <div  id="landing-main" class="">
+        <div id="landing-content" class="container">
+            <img id="np-logo" class="img-responsive" src="/Snake_Pit_Logo.png">
             <div id="cta-container" class="text-center">
                 <button id="cto-button" class="btn btn-lg">
-                    <a href={{pathFor 'menu'}}>Play</a>
+                    <a href={{pathFor 'menu'}}>Join Game</a>
                 </button>
             </div>
         </div>
@@ -50,8 +46,14 @@
     </div>
     
     <div id="leader-scores" class="container">
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <i class="center-fa fa fa-certificate"></i>
+        </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 align-vertical ">
             <h3>43 Hall Of Fame</h3>
+        </div>
+        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <i class="center-fa fa fa-user"></i>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 align-vertical">
             <h3>43 Current Players</h3>
@@ -66,35 +68,9 @@
 
     <div class="container">
         <div class="col-xs-4 col-sm-4 col-md-3 col-lg-4">
-            <a href="#" class="thumbnail">
-                <i class="fa fa-trophy"></i>
-            </a>
-        </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-4">
-            <a href="#" class="thumbnail">
-                <i class="fa fa-check"></i>
-            </a>
-        </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-4">
-            <a href="#" class="thumbnail">
-                <i class="fa fa-star"></i>
-            </a>
+            <!-- <a href="#" class="thumbnail"> -->
+                <i class="center-fa fa fa-trophy"></i>
+            <!-- </a> -->
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -105,6 +81,38 @@
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
+    <div class="container">
+        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-4">
+            <!-- <a href="#" class="thumbnail"> -->
+                <i class="center-fa fa fa-check"></i>
+            <!-- </a> -->
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="col-xs-4 col-sm-4 col-md-3 col-lg-4">
+            <!-- <a href="#" class="thumbnail"> -->
+                <i class="center-fa fa fa-star"></i>
+            <!-- </a> -->
+        </div>
+    <!-- </div> -->
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+
     <footer class="footer">
       <div class="container">
         <p class="text-muted">Snake Pit Provided by Allen  and Daniel</p>
