--- a/client/index.html
+++ b/client/index.html
@@ -1,22 +1,13 @@
 <head>
-  <title>WAPRO | Meteor JS</title>
+  <title>Snake Pits | A multiplayer game of snake, built with Meteor"</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <meta content="Snake Pit | Play the best snake game of snake developed with Javascript">
+  <meta content="Snake Pits | A multiplayer game of snake, built with Meteor">
   <!-- Open Graph Meta Tags -->
   <meta property="og:type" content="website"/>
-  <meta property="og:title" content="Snake Pit | The best snake game developed by Allen Eubank"/>
-  <meta property="og:description" content="Snake Pit is the best retro snake game to date, it brings the classic game of snake to a whole new level"/>
-  <meta property="og:site_name" content="Snake Pit"/>
-  <meta property="og:url" content="https://snake-pit-2.meteor.com/"/>
-  <!-- <meta property="og:image" content="my/favicon.ico"/> -->
-  <!-- Twitter Card Meta Tags -->
-  <!-- <meta name="twitter:card" content="summary"/> -->
-  <!-- <meta name="twitter:title" content="Title for twitter"/>
-  <meta name="twitter:description" content="description for twitter"/>
-  <meta name="twitter:image" content="https://picture/to/be/displayed.png"/>
-  <meta name="twitter:site" content="twitter.site"/>
-  <meta name="twitter:creator" content="@muchies_creator"/> -->
-
+  <meta property="og:title" content="Snake Pits | A multiplayer game of snake, built with Meteor by Allen Eubank"/>
+  <meta property="og:description" content="Snake Pits is the best retro snake game to date, it brings the classic game of snake to a whole new level"/>
+  <meta property="og:site_name" content="Snake Pits"/>
+  <meta property="og:url" content="https://snake-pits.com/"/>
   <meta name="google-site-verification" content="aun_SD7Y7hQzFko_1XPGegZl8N9WNJ8BxCjuGFHLi_E" />
 </head>
